// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls methods calls update firstName and changeFocusedField 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -74,11 +74,13 @@
              \\"marginTop\\": 15,
              \\"textAlignVertical\\": \\"center\\",
              \\"textTransform\\": \\"none\\",
            }
          }
-       />
+       >
+         First Name or Nickname
+       </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          autoFocus={true}
          blurOnSubmit={false}
@@ -86,11 +88,11 @@
          multiline={false}
          onBlur={[Function onBlur]}
          onChangeText={[Function onChangeText]}
          onFocus={[Function onFocus]}
          onSubmitEditing={[Function lastNameFocus]}
-         placeholder=\\"First Name (Required)\\"
+         placeholder=\\"\\"
          placeholderTextColor=\\"#ffffff\\"
          rejectResponderTermination={true}
          returnKeyType=\\"next\\"
          selectionColor=\\"#3CC8E6\\"
          style={"
`;

exports[`calls methods calls update lastName and changeFocusedField 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -141,22 +141,24 @@
              \\"marginTop\\": 15,
              \\"textAlignVertical\\": \\"center\\",
              \\"textTransform\\": \\"none\\",
            }
          }
-       />
+       >
+         Last Name
+       </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={false}
          autoFocus={false}
          blurOnSubmit={false}
          editable={true}
          multiline={false}
          onBlur={[Function onBlur]}
          onChangeText={[Function onChangeText]}
          onFocus={[Function onFocus]}
-         placeholder=\\"Last Name (optional)\\"
+         placeholder=\\"\\"
          placeholderTextColor=\\"#ffffff\\"
          rejectResponderTermination={true}
          returnKeyType=\\"done\\"
          selectionColor=\\"#3CC8E6\\"
          style={"
`;

exports[`calls methods updates profile picture 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`calls methods updates relationshipType 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`render correctly | With Person | No Picture 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "paddingHorizontal": 25,
      "paddingVertical": 50,
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="popupMenuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                Array [
                  Object {
                    "borderRadius": 48,
                    "height": 96,
                    "width": 96,
                  },
                  Object {
                    "backgroundColor": "rgb(19, 181, 125)",
                  },
                  undefined,
                ],
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "SourceSansPro-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "lineHeight": 16,
                    "textAlign": "center",
                    "textAlignVertical": "bottom",
                    "textTransform": "none",
                  },
                  Object {
                    "fontSize": 64,
                    "lineHeight": 20,
                  },
                ]
              }
            >
              C
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#3CC8E6",
                "borderRadius": 50,
                "height": 32,
                "justifyContent": "center",
                "left": 65,
                "position": "absolute",
                "top": 60,
                "width": 32,
              }
            }
          >
            <SvgMock
              color="#ffffff"
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name (Required)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="firstNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Christian"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Last Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="lastNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Huffman"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Stage
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          onPress={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#3CC8E6",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "marginVertical": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
              "width": "100%",
            }
          }
          testID="stageSelectButton"
        >
          Forgiven
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render correctly | With Person | No Stage 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "paddingHorizontal": 25,
      "paddingVertical": 50,
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="popupMenuButton"
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "base64image.jpeg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 48,
                  "height": 96,
                  "width": 96,
                },
                Object {
                  "backgroundColor": "rgb(19, 181, 125)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#3CC8E6",
                "borderRadius": 50,
                "height": 32,
                "justifyContent": "center",
                "left": 65,
                "position": "absolute",
                "top": 60,
                "width": 32,
              }
            }
          >
            <SvgMock
              color="#ffffff"
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name (Required)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="firstNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Christian"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Last Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="lastNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Huffman"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Stage
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          onPress={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#3CC8E6",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "marginVertical": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
              "width": "100%",
            }
          }
          testID="stageSelectButton"
        >
          Choose a stage
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`render correctly | With Person | Not Me | No Person Category 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "paddingHorizontal": 25,
      "paddingVertical": 50,
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
            },
          ]
        }
      />
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name (Required)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="firstNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Christian"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Last Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="lastNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Huffman"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Stage
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          onPress={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#3CC8E6",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "marginVertical": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
              "width": "100%",
            }
          }
          testID="stageSelectButton"
        >
          Forgiven
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        How do you know each other?
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="popupMenuButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "alignItems": "flex-start",
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginVertical": 10,
                "textAlignVertical": "center",
                "textTransform": "none",
                "width": "100%",
              }
            }
          >
            Choose a category
          </Text>
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`render correctly | With Person | Not Me | With Person Category 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "paddingHorizontal": 25,
      "paddingVertical": 50,
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
            },
          ]
        }
      />
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name (Required)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="firstNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Christian"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Last Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="lastNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Huffman"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Stage
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          onPress={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#3CC8E6",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "marginVertical": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
              "width": "100%",
            }
          }
          testID="stageSelectButton"
        >
          Forgiven
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        How do you know each other?
      </Text>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="popupMenuButton"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              Object {
                "alignItems": "flex-start",
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginVertical": 10,
                "textAlignVertical": "center",
                "textTransform": "none",
                "width": "100%",
              }
            }
          >
            Family
          </Text>
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`render correctly | With Person | With Picture 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "paddingHorizontal": 25,
      "paddingVertical": 50,
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="popupMenuButton"
        >
          <Image
            resizeMode="cover"
            source={
              Object {
                "uri": "base64image.jpeg",
              }
            }
            style={
              Array [
                Object {
                  "borderRadius": 48,
                  "height": 96,
                  "width": 96,
                },
                Object {
                  "backgroundColor": "rgb(19, 181, 125)",
                },
                undefined,
              ]
            }
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#3CC8E6",
                "borderRadius": 50,
                "height": 32,
                "justifyContent": "center",
                "left": 65,
                "position": "absolute",
                "top": 60,
                "width": 32,
              }
            }
          >
            <SvgMock
              color="#ffffff"
            />
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        First Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name (Required)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="firstNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Christian"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Last Name
      </Text>
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#ECEEF2",
              "color": "#3CC8E6",
            },
          ]
        }
        testID="lastNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Huffman"
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Stage
      </Text>
      <View
        style={
          Object {
            "alignItems": "center",
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          onPress={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "color": "#3CC8E6",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "marginVertical": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
              "width": "100%",
            }
          }
          testID="stageSelectButton"
        >
          Forgiven
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly | No Person 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "paddingHorizontal": 25,
      "paddingVertical": 50,
    }
  }
>
  <View
    style={
      Object {
        "bottom": 0,
      }
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 2,
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "marginBottom": 30,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 24,
                "fontStyle": "normal",
                "lineHeight": 30,
                "maxWidth": 230,
                "textAlign": "center",
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Who would you like to take steps of faith with this week?
          </Text>
        </View>
      </View>
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={true}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onSubmitEditing={[Function]}
        placeholder="First Name (Required)"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        returnKeyType="next"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#3CC8E6",
              "color": "#ffffff",
            },
          ]
        }
        testID="firstNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "flexDirection": "column",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "marginTop": 15,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        autoCorrect={false}
        autoFocus={false}
        blurOnSubmit={false}
        editable={true}
        multiline={false}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Last Name (optional)"
        placeholderTextColor="#ffffff"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": 24,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomColor": "#3CC8E6",
              "color": "#ffffff",
            },
          ]
        }
        testID="lastNameInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
    </View>
  </View>
</View>
`;
